# test-rs-etl

./: Cargo.toml  requirements.txt
src/: bridges.rs  main.rs  mongo_client.rs  sinks.rs  sources.rs
src_py/: app.py
