[package]
name = "test-rs-etl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
serde_json = "1.0"
async-trait = "0.1.72"
reqwest = "0.11.20"


[dependencies.mongodb]
version = "2.6.0"
default-features = false
features = ["async-std-runtime"]
